<resources>
    <string name="app_name">GeoFence</string>
    <string name="geolocation">GeoLocation</string>
    <string name="geolocationoff">Geolocation off</string>
    <string name="unknown_geofence_error">unknown_geofence_error</string>
    <string name="geofence_not_available">geofence_not_available</string>
    <string name="geofence_too_many_geofences">geofence_too_many_geofences</string>
    <string name="geofence_too_many_pending_intents">geofence_too_many_pending_intents</string>
    <string name="geofence_transition_entered">geofence_transition_entered</string>
    <string name="geofence_transition_exited">geofence_transition_exited</string>
    <string name="unknown_geofence_transition">unknown_geofence_transition</string>
    <string name="returning_to_recipe">returning_to_recipe</string>
    <string name="running_your_recipe">running_your_recipe</string>
    <string name="triggerleaving">triggerleaving</string>
    <string name="triggerreturn">triggerreturn</string>
    <string name="when_leaving">when_leaving</string>
    <string name="no_recipe_selected">no_recipe_selected</string>
    <string name="one_mile">one_mile</string>
    <string name="drag_the_slider_above_to_adjust_the_leaving_radius">drag_the_slider_above_to_adjust_the_leaving_radius</string>
    <string name="users">users</string>
</resources>
